style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&family=Montserrat:wght@100&display=swap');

body{
    background-color: wheat;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Josefin Sans',sans-serif;
}

#header{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 20px 80px;
    background: rgb(150, 9, 9);
    box-shadow: 0 5px 15px rgba(0,0,0,0.6);
    z-index: 999;
    position: sticky;
    top: 0;
    left: 0;
}

#navbar{
    display: flex;
    align-items: center;
    justify-content: center;

}

#navbar li{
    list-style: none;
    padding: 0 20px;
    position: relative;
} 

#navbar li a{
    text-decoration: none;
    font-size: 16px;
    font-weight: 600;
    color: white;
    transition: 0.3s ease;
}

#navbar li a:hover, #navbar li a.active{
    color:bisque
}

#navbar li a.active::after,#navbar li a:hover:after {
    content:"";
    width: 30%;
    height: 2px;
    background: bisque; 
    position: absolute;
    bottom: -4px;
    left: 20px;
}

h1{
    font-size: 50px;
    line-height: 64px;
    color:black
}

h2{
    font-size: 46px;
    line-height: 54px;
    color:black
}

h3{
    font-size: 50px;
    line-height: 64px;
    color:black
}

h4{
    font-size: 20px;
    color:black
}

h6{
    font-weight: 700;
    font-size: 16px;

}

#hero{
    background-color: beige;
    background-image: url("Img/bg.jpg");
    height:90vh;
    width: 100%;
    background-position: top 25% right;
    background-size: cover;
    display: flex;
    align-items:center;
    justify-content: center;
    flex-direction: column;
}

#hero h4{   
    color: bisque;
    padding-bottom: 15px;
}
#hero h1{
    color: bisque;
    font-weight: bold;
} 

#hero button{
    background-image: url("Img/button.png");
    background-color: transparent;
    color: bisque;
    border: 0;
    padding: 14px 80px;
    font-weight: 700;
    font-size: 15px;
}

.section-1{
    padding: 40px 80px;
}

.section3{
    padding: 10px 20px;
    
}

#featured{
    background-color: wheat;
    display: flex;
    align-items: center;
    justify-content: space-between

}

#featured .feature-box{
    background-color: white;
    width:180px;
    text-align: center;
    padding: 25px 15px;
    box-shadow: 20px 20px 34px rgba(0,0,0,0.03);
    border: 1px solid rgb(167, 161, 161);
    border-radius: 32px;
    margin: 15px 0;
}

#featured .feature-box:hover{
    box-shadow: 10px 10px 54px rgba(70,62,221,0.1);
}

#featured .feature-box h6{
    padding: 9px 8px 6px 8px;
    line-height: 1;
    border-radius: 4px;
    color: brown;
    background-color: bisque;
}

#featured .feature-box:nth-child(2) h6{
    background-color: rgb(227, 150, 227);
}

#featured .feature-box:nth-child(3) h6{
    background-color: rgb(112, 180, 229);
}

#featured .feature-box:nth-child(4) h6{
    background-color: rgb(227, 233, 117);
}

#product-1{
    background-color: wheat;
    text-align: center;
}

#product1{
    width: 23%;
    min-width: 250px;
    padding: 10px 12px;
    cursor: pointer;
    margin: 15px 0;
    transition: 0.2s ease;
    position: relative
}

#product2{
    width: 23%;
    min-width: 250px;
    padding: 10px 12px;
    cursor: pointer;
    margin: 15px 0;
    transition: 0.2s ease;
    position: relative
}

#product3{
    width: 23%;
    min-width: 250px;
    padding: 10px 12px;
    cursor: pointer;
    margin: 15px 0;
    transition: 0.2s ease;
    position: relative
}

#product4{
    width: 23%;
    min-width: 250px;
    padding: 10px 12px;
    cursor: pointer;
    margin: 15px 0;
    transition: 0.2s ease;
    position: relative
}

#product5{
    width: 23%;
    min-width: 250px;
    padding: 10px 12px;
    cursor: pointer;
    margin: 15px 0;
    transition: 0.2s ease;
    position: relative
}

#product6{
    width: 23%;
    min-width: 250px;
    padding: 10px 12px;
    cursor: pointer;
    margin: 15px 0;
    transition: 0.2s ease;
    position: relative
}


#product7{
    width: 23%;
    min-width: 250px;
    padding: 10px 12px;
    cursor: pointer;
    margin: 15px 0;
    transition: 0.2s ease;
    position: relative
}

#product8{
    width: 23%;
    min-width: 250px;
    padding: 10px 12px;
    cursor: pointer;
    margin: 15px 0;
    transition: 0.2s ease;
    position: relative
}


.pro-container{
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.pro{
    background-color: white;
    width: 23%;
    min-width: 250px;
    padding: 10px 12px;
    border: 1px solid rgb(167, 161, 161);
    cursor: pointer;
    box-shadow: 20px 20px 30px rgba(0,0,0,0.03);
    margin: 15px 0;
    transition: 0.2s ease;
    position: relative

}

.pro:hover{
    box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
}

.pro img{
    width: 100%;
    border-radius: 20px;
}

.pro .des{
    text-align: start;
    padding: 10px 0;
}

.pro .des span{
    color: brown;
    font-size: 20px;
}

.pro .des h5{
    padding-top: 7px;
    color: brown;
    font-size: 20px;
}

footer{
    padding-top: 40px;
    padding-left: 30px;
    padding-right: 30px;
    padding-bottom: 30px;
    display: flex;
    flex-wrap: wrap;
    justify-content:space-between;
    background-color: rgb(150, 9, 9);
    
}

footer a{
    text-decoration: none;
}

footer a:link, footer a:active, footer a:visited{
    color: beige;
}

footer h4{
    font-size: 30px;
    font-weight: bold;
    color: beige;
}

footer p{
    color: beige;
}

#page-header{
    background-image: url("Img/Shop/b1.jpg");
    height: 40vh;
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
    flex-direction: column;
    
}

#page-header h1{
    color: beige;
}

#blog-header{
    background-image: url("Img/blog/blog.jpg");
    height: 40vh;
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

#blog-header h1{
    color: beige;
}


#about-head{
    
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    text-align: center;
    padding-top: 40px;
    padding-bottom: 40px;
}

#about-head h2{
    padding-top: 60px;
}

#about-head p{
    color: brown;
    font-weight: bolder;
    font-size: 25px;
}

#contact-header{
    background-image: url("Img/contact/best-contact-us-page-examples.webp");
    background-repeat: no-repeat;
    height: 60vh;
    width: 100%;
    background-size: cover;
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    padding-top: 40px;
    padding-bottom: 40px;
}

#contact-header h1, #contact-header h2{
    color: beige;
}

#contact-details{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#contact-details .detail{
    width: 40%;
}

#contact-details .detail span{
    font-size: 60px;
    font-weight: bold;
}

#contact-details .detail h2{
    font-size: 26px;
    line-height: 35px;
    padding:20px 0
}

#contact-details .detail h3{
    font-size: 26px;
    padding-bottom: 15px;
}

#contact-details .detail li{
    list-style: none;
    display: flex;
    padding: 10px 0;
}

#contact-details .detail li i{
    font-size: 14px;
    padding-right: 22px;
    padding-left: 10px;
}

#contact-details .detail p{
    margin: 0;
    font-size: 22px;
    font-weight: bold;
    
}

.map{
    padding-top: 40px;
    padding-bottom: 40px;
    padding-right: 30px;
}

#hero a:active, #hero a::before, #hero a:visited{
    color: beige;
    animation: none;
}

#cart{
    padding-top: 30px;
}

#cart-header{
    display: flex;
    text-align: center;
    justify-content: space-between;
    flex-direction: column;
    background-image: url(Img/cart/Blog-Header.jpg);
    height: 30vh;
   
}

#cart-header h1{
    padding-top: 100px;
    color: brown;
}

#cart table{
    width: 100%;
    border-collapse: collapse;
    table-layout: fixed;
    white-space: nowrap;
}

#cart table img{
    width: 70px;
}

#cart table td:nth-child(1)
{
    width: 100px;
    text-align: center;
}

#cart table td:nth-child(2)
{
    width: 150px;
    text-align: center;
}

#cart table td:nth-child(3)
{
    width: 250px;
    text-align: center;
}

#cart table td:nth-child(4),#cart table td:nth-child(5),#cart table td:nth-child(6)
{
    width: 150px;
    text-align: center;
}

#cart table td:nth-child(5) input{
    width: 70px;
    padding: 10px 5px 10px 15px;
}

#cart table thead{
    border: 1px solid brown;
    border-left: none;
    border-right: none;
}

#cart table thead td{
    font-weight: bolder;
    text-transform: uppercase;
    font-size: 27px;
    color: brown;
    padding: 18px 0;
}

#cart table tbody tr td{
    padding-top: 15px;
}

#cart table tbody td{
    font-size: 22px;
    font-weight: bolder;
    color: brown;
}

#cart-add{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

#coupon{
    width: 50%;
    margin-bottom: 30px;
    padding-left:40px
}

#coupon h3, #subtotal h3{
    padding-top: 60px;
    font-size: 40px;
    color: brown;
}

#coupon input{
    padding:10px 20px;
    outline: none;
    width: 60%;
    border: 1px solid brown;
    margin-right: 10px;
    color: brown;
}

#coupon button{
    cursor: pointer; 
    border: 1px solid #3498db; 
    background-color: brown; 
    height: 50px; 
    width: 100px; 
    color: beige; 
    font-size: 1.5em; 
    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
    padding: 10px 10px;
    border-radius: 32px;
}


#subtotal{
    
    width: 50%;
    margin-bottom: 30px;
    border: 1px solid brown;
    padding-right: 30px;
    padding-left: 30px;
    padding-bottom: 30px;

}

#subtotal table{
   border-collapse: collapse;
   width: 100%;
   margin-bottom: 20px;

}

#subtotal table td{
    width: 50%;
    border: 1px solid brown;
    padding: 10px;
    font-size: 24px;
}

#subtotal td{
    color: brown;
}

.cmptbtn{
    height: 75px;
    width: 150px;
    border: 1px black solid;
    background-color: beige;
    font-weight: bolder;
    color: brown;
   
}

#subtotal h3{
    padding-top: 10px;
    padding-bottom: 30px;
}

#subtotal button{
    cursor: pointer; 
    border: 1px solid #3498db; 
    background-color: brown; 
    height: 70px; 
    width: 350px; 
    color: beige; 
    font-size: 1.5em; 
    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
    padding: 10px 10px;


}

.controller-div{
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

.inp{
    font-weight: bolder;
}

